quil-rs/src/program/snapshots/quil_rs__program__graph__tests__classical_read_write_load_load.snap
---
source: quil-rs/src/program/graph.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="ordering"];
    "block_0_0" [shape=rectangle, label="[0] LOAD params1[0] params2 integers[0]"];
    "block_0_0" -> "block_0_1" [label="await read"];
    "block_0_1" [shape=rectangle, label="[1] LOAD params2[0] params3 integers[0]"];
    "block_0_1" -> "block_0_end" [label="ordering"];
    "block_0_end" [shape=circle, label="end"];
  }
}

